# edutech-vision-secomp

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.ps1  run.sh
assets/samples/: labels_demo.csv  labels_template.csv
docs/: CHECKLIST_SOFTWARE_APRESENTACAO.md  DEFESA_ORAL.md  EXPOSICAO_SECOMP.md  PLANO_TESTES_PRIOR_ART.md  RELATORIO_TECNICO.md  RUBRICA_MAX_NOTA.md
docs/entrega_professor/: README.md  RESULTADOS_BENCHMARK.md  artigo_edutech_vision_grupo3.docx
docs/entrega_professor/latex/: README.md  artigo_edutech_vision_grupo3.bib  artigo_edutech_vision_grupo3.tex
scripts/: audit_individual_media.py  benchmark_vision.py  doctor.py  download_benchmarks.py  download_hq_audit_videos.py  download_individual_benchmarks.py  download_models.py  export_demo_screenshot.py  generate_article_docx.py  generate_session_report.py  launcher.ps1  manual_face_count_audit.py  presentation_check.py  python.bat  python.sh  run_demo.ps1  run_demo.sh  run_individual.ps1  run_individual.sh  run_plateia.ps1  run_plateia.sh  setup.ps1  summarize_results.py
src/edutech_vision/: __init__.py  __main__.py  config.py  launcher.py  protocols.py
src/edutech_vision/core/: __init__.py  aggregation.py  detection.py  filters.py  landmarks.py  metrics.py  (+2 more)
tests/: test_confusion_matrix.py  test_failover.py  test_fps.py  test_lighting.py  test_occlusion.py
tests/unit/: test_benchmark_vision.py  test_core_metrics.py  test_detection.py  test_individual_quality.py  test_landmarks_profiles.py  test_launcher.py  test_session_report.py
(+11 files in other folders)
